--- a/colorblocks/style.css
+++ b/colorblocks/style.css
@@ -49,9 +49,11 @@ section div {
 	color: #fff;
 	font-weight: bold;
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	border-radius: 8px;
 	opacity: 100;
 	-webkit-transition: opacity 500ms ease-in;
+	-moz-transition: opacity 500ms ease-in;
 }
 
 #red {background-color: red}
@@ -65,6 +67,7 @@ section div {
 section div.active{
 	opacity: .3;
 	-webkit-transition: opacity 500ms ease-out;
+	-moz-transition: opacity 500ms ease-out;
 }
 section button {
 	float: left;
