--- a/colorblocks/style.css
+++ b/colorblocks/style.css
@@ -1,6 +1,5 @@
 body {
-	font-family: Helvetica;
-	font-weight: 100;
+	font-family: 'Lato', sans-serif;
 }
 hgroup {
 	border-bottom: 1px dotted #CCC;
@@ -8,17 +7,19 @@ hgroup {
 	padding-bottom: 10px;
 }
 h1 {
+	font-size: 38px;
 	margin: 0;
+	font-weight: 700;
 }
 h2 {
-	font-size: 14px;
-	font-weight: normal;
-	color: #999;
+	font-size: 16px;
+	font-weight: 300;
+	color: #555;
 	margin: 10px 0 0 0;
 }
 h3 {
-	font-size: 10px;
-	font-weight: normal;
+	font-size: 12px;
+	font-weight: 300;
 	color: #ccc;
 	margin: 10px 0 0 0;
 }
@@ -31,6 +32,9 @@ nav ul {
 	padding: 0;
 }
 nav ul li {
+	font-size: 16px;
+	font-weight: 700;
+	color: #555;
 	list-style-type: none;
 	float: left;
 	padding: 0 10px;
@@ -47,7 +51,8 @@ section div {
 	padding-top: 50px;
 	text-align: center;
 	color: #fff;
-	font-weight: bold;
+	font-weight: 700;
+	font-size: 16px;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	border-radius: 8px;
@@ -73,7 +78,7 @@ section button {
 	float: left;
 	clear: both;
 	padding: 10px 40px;
-	background: black;
+	background: #555;
 	color: white;
 	border: none;
 	border-radius: 8px;
